- Updating the bot with Segwit-enabled code through Bitcoin Core RPC - Removed a lot of reliance on "Bit" library - Fixed a number of bugs - Removed some functionality in tipbitWindow (eventually will redesign that...)

--- a/praw.ini
+++ b/praw.ini
@@ -18,11 +18,16 @@ reddit_url=https://www.reddit.com
 # The URL prefix for short URLs.
 short_url=https://redd.it
 
-[tip_bit]
+[MAIN_BOT_NAME]
 client_id=EXAMPLE_CLIENT_ID
 client_secret=EXAMPLE_APP_SECRET_KEY
-password=ExamplePassword
-username=ExampleBotUsername
-user_agent=ExampleUserAgent
+password=EXAMPLE_PASSWORD
+username=EXAMPLE_BOT_REDDIT_USERNAME
+user_agent=EXAMPLE_USER_AGENT
 
-# TipBit
+[TEST_BOT_NAME]
+client_id=EXAMPLE_CLIENT_ID
+client_secret=EXAMPLE_APP_SECRET_KEY
+password=EXAMPLE_PASSWORD
+username=EXAMPLE_BOT_REDDIT_USERNAME
+user_agent=EXAMPLE_USER_AGENT
